<resources>
    <string name="app_name">FeedbackApp</string>
    <string name="company_logo">Company Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
</resources>
